[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/rm_almanack/rm_almanack.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/ui/book/recipe_page.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/book/arrow.png" type="Texture" id=3]
[ext_resource path="res://game/ui/RecipeDisplayBig.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="RecipeDisplayBig" type="TextureRect"]
anchor_right = 0.312
anchor_bottom = 0.741
margin_right = 0.959961
margin_bottom = -0.280029
rect_min_size = Vector2( 600, 800 )
texture = ExtResource( 2 )
stretch_mode = 6
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 40
custom_constants/margin_top = 120
custom_constants/margin_left = 40
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 120.0
margin_right = 560.0
margin_bottom = 700.0
rect_min_size = Vector2( 272, 205 )
custom_constants/separation = 30

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 520.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RECIPE NAME"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 56.0
margin_top = 75.0
margin_right = 463.0
margin_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="Left" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 203.0
margin_bottom = 203.0
rect_min_size = Vector2( 203, 203 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Left"]
margin_left = 101.0
margin_top = 101.0
margin_right = 101.0
margin_bottom = 101.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 223.0
margin_right = 263.0
margin_bottom = 203.0
rect_min_size = Vector2( 0, 200 )

[node name="Arrow" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Middle"]
margin_top = 61.0
margin_right = 40.0
margin_bottom = 141.0
rect_min_size = Vector2( 40, 80 )
texture = ExtResource( 3 )
expand = true

[node name="Right" type="CenterContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 283.0
margin_right = 407.0
margin_bottom = 203.0
rect_min_size = Vector2( 124, 200 )

[node name="ReagentList" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Right"]
margin_left = 60.0
margin_top = 101.0
margin_right = 64.0
margin_bottom = 101.0

[node name="LeftColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]

[node name="RightColumn" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Right/ReagentList"]
margin_left = 4.0
margin_right = 4.0

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 520.0
margin_bottom = 344.0
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
